# nninference

./: .gitignore  AGENTS.md  README.md  build.zig  build.zig.zon  pyproject.toml  worklog.md
.omo/: ulw-loop-brief-inference-opt-harness.md
.omo/drafts/: inference-optimization-harness.md
.omo/plans/: 20260610-inference-optimization-harness.md
.omo/ulw-loop/: bootstrap-notepad.md
.omo/ulw-loop/evidence/: chart-sections-tmux.txt  correctness-exec-tmux.txt  correctness-plan-tmux.txt  final-checkpoint.json  final-status-after-checkpoints.json  final-verification-after-lifecycle-chart-fixes.txt  final-verification-after-review-fixes.txt  final-verification.txt  green-tests_test_autoptimize_TestClaimBoundaries_test_correctness_only_records_alignment_and_zig_build.txt  green-tests_test_autoptimize_TestDryRunCreatesArtifacts_test_dry_run_writes_artifacts.txt  (+24 more)
docs/: metal_packed_session_audit.md
metal/: vector_add.metal
scripts/: AGENTS.md  autoptimize.py  autoptimize_lmstudio.py  autoptimize_loop.py  autoptimize_report.py  benchmark_bridge.py  benchmark_metal_command_modes.py  benchmark_metal_logits.py  benchmark_metal_logits_matrix.py  benchmark_metal_logits_reuse.py  consolidate_benchmark_findings.py  decode_token.py  download_model.py  generate_checkpoint_logits_fixture.py  hf_prefill_bridge.py  inspect_model.py  run_alignment_tests.py  summarize_metal_benchmarks.py
src/: AGENTS.md  main.zig  metal_bridge.h  metal_bridge.m  metal_logits_test.zig  metal_smoke.zig
tests/: test_autoptimize.py  test_autoptimize_lifecycle_report.py  test_autoptimize_loop.py
(+2 files in other folders)
