[project]
name = "nninference"
version = "0.1.0"
description = "Zig CPU inference alignment harness for Qwen/Qwen3.5-0.8B"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.32",
    "numpy>=2.0",
    "safetensors>=0.5",
    "torch>=2.7",
    "transformers>=4.52",
]

[tool.uv]
package = false
